# phone-iot-2

./: LICENSE-MIT  README.md  flutter_rust_bridge.yaml  justfile  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: AppDelegate.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: actuators.dart  audio.dart  bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  canvas.dart  conversions.dart  main.dart  network.dart  sensors.dart  util.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  config.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  frb_generated.rs  lib.rs
rust_builder/android/: build.gradle
rust_builder/ios/: native.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: native.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
